--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -1,3 +1,12 @@
 <h3>Trainer</h3>
 <p>Name: <%= @trainer.name if @trainer.name %></p>
 <p>Email: <%= @trainer.email if @trainer.email %></p>
+<% @trainer.pokemons.each do |p|%> 
+    <p> Pokemon Name: <%= p.name %> </p>
+    <p> Pokemon Level: <%= p.level %> </p>
+    <p> Pokemon Health: <%= p.health %> </p>
+    <%= button_to "Damage!", damage_path(id: p), :class => "button medium", :method => :patch %>
+<% end %>
+<% if @trainer == current_trainer %>
+    <%= button_to "Create Pokemon!", new_pokemon_path, :class => "button medium", :method => :get %>
+<% end %>
